force-app/main/default/objects/Votante__c/Votante__c.object-meta.xml
<CustomObject>
    <label>Votante</label>
    <nameField>
        <label>Votante Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Votantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>