force-app/main/default/objects/Votante__c/fields/Activista__c.field-meta.xml
<CustomField>
    <fullName>Activista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activista</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Grupo_Activista__c</field>
            <operation>equals</operation>
            <valueField>Activista__c.Grupo_Activista__r.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Activista__c</referenceTo>
    <relationshipLabel>Votantes</relationshipLabel>
    <relationshipName>Votantes_Activista</relationshipName>
    <type>Lookup</type>
</CustomField>