force-app/main/default/objects/Votante__c/fields/Afiliacion_Partidaria_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Afiliacion_Partidaria_Ciudadano__c</fullName>
    <formula>Citizen__r.party_affiliation__c</formula>
    <label>Afiliacion Partidaria Ciudadano</label>
    <type>Text</type>
</CustomField>