force-app/main/default/objects/Votante__c/fields/Apellido_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Ciudadano__c</fullName>
    <formula>Citizen__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Ciudadano</label>
    <type>Text</type>
</CustomField>