force-app/main/default/objects/Votante__c/fields/Cantidad_de_actividades__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_actividades__c</fullName>
    <label>Cantidad de actividades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>