force-app/main/default/objects/Votante__c/fields/Celular_agregado__c.field-meta.xml
<CustomField>
    <fullName>Celular_agregado__c</fullName>
    <label>Celular agregado</label>
    <type>Phone</type>
</CustomField>