force-app/main/default/objects/Votante__c/fields/Celular_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Celular_Ciudadano__c</fullName>
    <formula>Citizen__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celular Ciudadano</label>
    <type>Text</type>
</CustomField>