force-app/main/default/objects/Votante__c/fields/Circuito_Numero__c.field-meta.xml
<CustomField>
    <fullName>Circuito_Numero__c</fullName>
    <label>Circuito Numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>