force-app/main/default/objects/Votante__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Citizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Votantes</relationshipLabel>
    <relationshipName>Votantes</relationshipName>
    <type>Lookup</type>
</CustomField>