force-app/main/default/objects/Votante__c/fields/Contactar_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Contactar_Whatsapp__c</fullName>
    <formula>IF(  Citizen__r.MobilePhone  != Null,(HYPERLINK(&apos;https://api.whatsapp.com/send/?phone=&apos; +  Citizen__r.MobilePhone , &apos;Contactar Whatsapp&apos;)), &apos;Whatsapp No Disponible&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contactar Whatsapp</label>
    <type>Text</type>
</CustomField>