force-app/main/default/objects/Votante__c/fields/DNI_Activista__c.field-meta.xml
<CustomField>
    <fullName>DNI_Activista__c</fullName>
    <formula>Activista__r.DNI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNI Activista</label>
    <type>Text</type>
</CustomField>