force-app/main/default/objects/Votante__c/fields/Domicilio_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Ciudadano__c</fullName>
    <formula>Citizen__r.Direccion_Completa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domicilio Ciudadano</label>
    <type>Text</type>
</CustomField>