force-app/main/default/objects/Votante__c/fields/Domicilio_movilidad__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_movilidad__c</fullName>
    <label>Domicilio movilidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>