force-app/main/default/objects/Votante__c/fields/Edad_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Edad_Ciudadano__c</fullName>
    <formula>Citizen__r.Age_f_x__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad Ciudadano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>