force-app/main/default/objects/Votante__c/fields/Email_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Email_Ciudadano__c</fullName>
    <formula>Citizen__r.Email</formula>
    <label>Email Ciudadano</label>
    <type>Text</type>
</CustomField>