force-app/main/default/objects/Votante__c/fields/Es_Padron_2__c.field-meta.xml
<CustomField>
    <fullName>Es_Padron_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Padron 2</label>
    <type>Checkbox</type>
</CustomField>