force-app/main/default/objects/Votante__c/fields/Es_Padron__c.field-meta.xml
<CustomField>
    <fullName>Es_Padron__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SysAdmin Registro pertenece a Padrones Local</description>
    <label>Es Padron</label>
    <type>Checkbox</type>
</CustomField>