force-app/main/default/objects/Votante__c/fields/Es_Provisorio__c.field-meta.xml
<CustomField>
    <fullName>Es_Provisorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Provisorio</label>
    <type>Checkbox</type>
</CustomField>