force-app/main/default/objects/Votante__c/fields/Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Etiqueta__c</fullName>
    <label>Etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>