force-app/main/default/objects/Votante__c/fields/Fecha_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Etiqueta__c</fullName>
    <label>Fecha Etiqueta</label>
    <type>Date</type>
</CustomField>