force-app/main/default/objects/Votante__c/fields/Fecha_Nacimiento_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Nacimiento_Ciudadano__c</fullName>
    <formula>Citizen__r.Search_Birthdate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Nacimiento Ciudadano</label>
    <type>Text</type>
</CustomField>