force-app/main/default/objects/Votante__c/fields/Fijo_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Fijo_Ciudadano__c</fullName>
    <formula>Citizen__r.HomePhone</formula>
    <label>Fijo Ciudadano</label>
    <type>Text</type>
</CustomField>