force-app/main/default/objects/Votante__c/fields/Franja_Horaria__c.field-meta.xml
<CustomField>
    <fullName>Franja_Horaria__c</fullName>
    <label>Franja Horaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>