force-app/main/default/objects/Votante__c/fields/Geo_Barrio__c.field-meta.xml
<CustomField>
    <fullName>Geo_Barrio__c</fullName>
    <label>Geo Barrio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Escuela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>