force-app/main/default/objects/Votante__c/fields/Geo_Barrios_Agrupados__c.field-meta.xml
<CustomField>
    <fullName>Geo_Barrios_Agrupados__c</fullName>
    <label>Geo Barrios Agrupados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>