force-app/main/default/objects/Votante__c/fields/Geo_Grupo__c.field-meta.xml
<CustomField>
    <fullName>Geo_Grupo__c</fullName>
    <label>Geo Grupo Lista</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acuña</fullName>
            </value>
            <value>
                <fullName>Sin Grupo</fullName>
            </value>
            <value>
                <fullName>Geo_Barrio</fullName>
            </value>
            <value>
                <fullName>Castagnino</fullName>
            </value>
            <value>
                <fullName>Cabero (+)</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Las Flores</fullName>
            </value>
            <value>
                <fullName>Belgrano</fullName>
            </value>
            <value>
                <fullName>Las Violetas</fullName>
            </value>
            <value>
                <fullName>Escuela</fullName>
            </value>
            <value>
                <fullName>El Libertador (+)</fullName>
            </value>
            <value>
                <fullName>Sarmiento (+)</fullName>
            </value>
            <value>
                <fullName>Magnasco (+)</fullName>
            </value>
            <value>
                <fullName>Parque Monte Grande</fullName>
            </value>
            <value>
                <fullName>Media Luna (+)</fullName>
            </value>
            <value>
                <fullName>Villa Zoila (+)</fullName>
            </value>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Cerino (+)</fullName>
            </value>
            <value>
                <fullName>Panamericano (+)</fullName>
            </value>
            <value>
                <fullName>Héroes De Malvinas (+)</fullName>
            </value>
            <value>
                <fullName>Monte Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>