force-app/main/default/objects/Votante__c/fields/Grupo_Activista__c.field-meta.xml
<CustomField>
    <fullName>Grupo_Activista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geo Grupo</label>
    <referenceTo>Grupo_Activista__c</referenceTo>
    <relationshipLabel>Votantes</relationshipLabel>
    <relationshipName>Votantes_Grupo</relationshipName>
    <type>Lookup</type>
</CustomField>