force-app/main/default/objects/Votante__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>