force-app/main/default/objects/Votante__c/fields/Guid_Fx__c.field-meta.xml
<CustomField>
    <fullName>Guid_Fx__c</fullName>
    <formula>Citizen__r.guid__c</formula>
    <label>Guid Fx</label>
    <type>Text</type>
</CustomField>