force-app/main/default/objects/Votante__c/fields/Hora_Voto__c.field-meta.xml
<CustomField>
    <fullName>Hora_Voto__c</fullName>
    <label>Hora Voto</label>
    <type>Time</type>
</CustomField>