force-app/main/default/objects/Votante__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <label>Instagram</label>
    <length>255</length>
    <type>Text</type>
</CustomField>