force-app/main/default/objects/Votante__c/fields/Medio_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Medio_Etiqueta__c</fullName>
    <label>Medio Etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>