force-app/main/default/objects/Votante__c/fields/Necesita_movilidad__c.field-meta.xml
<CustomField>
    <fullName>Necesita_movilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necesita movilidad</label>
    <type>Checkbox</type>
</CustomField>