force-app/main/default/objects/Votante__c/fields/Nombre_Circuito__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Circuito__c</fullName>
    <label>Nombre Circuito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>