force-app/main/default/objects/Votante__c/fields/Nombre_Seccion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Seccion__c</fullName>
    <label>Nombre Seccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>