force-app/main/default/objects/Votante__c/fields/Nro_Mesa__c.field-meta.xml
<CustomField>
    <fullName>Nro_Mesa__c</fullName>
    <label>Nro. Mesa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>