force-app/main/default/objects/Votante__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>