force-app/main/default/objects/Votante__c/fields/Primer_Nombre_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre_Ciudadano__c</fullName>
    <formula>Citizen__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primer Nombre Ciudadano</label>
    <type>Text</type>
</CustomField>