force-app/main/default/objects/Votante__c/fields/Prioridad_llamado__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_llamado__c</fullName>
    <label>Prioridad llamado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>