force-app/main/default/objects/Votante__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>Inalcanzable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>