force-app/main/default/objects/Votante__c/fields/Score_Numerico__c.field-meta.xml
<CustomField>
    <fullName>Score_Numerico__c</fullName>
    <label>Score Numerico</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>