force-app/main/default/objects/Votante__c/fields/Seccion_Numero__c.field-meta.xml
<CustomField>
    <fullName>Seccion_Numero__c</fullName>
    <label>Seccion Numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>