force-app/main/default/objects/Votante__c/fields/Segundo_Nombre_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre_Ciudadano__c</fullName>
    <formula>Citizen__r.MiddleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segundo Nombre Ciudadano</label>
    <type>Text</type>
</CustomField>