force-app/main/default/objects/Votante__c/fields/Sexo_Ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Sexo_Ciudadano__c</fullName>
    <formula>Citizen__r.Gender__c</formula>
    <label>Sexo Ciudadano</label>
    <type>Text</type>
</CustomField>