force-app/main/default/objects/Votante__c/fields/Telefono_Fijo__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Fijo__c</fullName>
    <label>Telefono Fijo</label>
    <type>Phone</type>
</CustomField>