force-app/main/default/objects/Votante__c/fields/Tiene_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Whatsapp__c</fullName>
    <formula>Citizen__r.Whatsapp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiene Whatsapp?</label>
    <type>Checkbox</type>
</CustomField>