force-app/main/default/objects/Votante__c/fields/Voto__c.field-meta.xml
<CustomField>
    <fullName>Voto__c</fullName>
    <label>Voto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>