force-app/main/default/objects/Votante__c/validationRules/EditEsPadronField.validationRule-meta.xml
<ValidationRule>
    <fullName>EditEsPadronField</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Username!=&apos;juan.kleylein@prosumia.la&apos;, ISCHANGED(Es_Padron__c))</errorConditionFormula>
    <errorMessage>No es editable salvo por el Administrador</errorMessage>
</ValidationRule>