force-app/main/default/objects/Votante__c/validationRules/EditVotanteName.validationRule-meta.xml
<ValidationRule>
    <fullName>EditVotanteName</fullName>
    <active>true</active>
    <description>Solo JCK puede cambiarlo</description>
    <errorConditionFormula>AND($User.Username!=&apos;juan.kleylein@prosumia.la&apos;, ISCHANGED( Name ))</errorConditionFormula>
    <errorMessage>No se puede cambiar el Nombre del  Registro de Votante del Padron</errorMessage>
</ValidationRule>