force-app/main/default/objects/Votante__c/listViews/All_Datos_Contacto_Votante.listView-meta.xml
<ListView>
    <fullName>All_Datos_Contacto_Votante</fullName>
    <columns>NAME</columns>
    <columns>DNI__c</columns>
    <columns>Domicilio_Padron__c</columns>
    <columns>Celular_agregado__c</columns>
    <columns>Telefono_Fijo__c</columns>
    <columns>Email__c</columns>
    <columns>Facebook__c</columns>
    <columns>Instagram__c</columns>
    <columns>Linkedin__c</columns>
    <columns>Twitter__c</columns>
    <columns>Comentario__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos - Datos Contacto Votante</label>
    <sharedTo>
        <group>Activismo</group>
    </sharedTo>
</ListView>