force-app/main/default/objects/Votante__c/listViews/All_Datos_Electorales_Votante.listView-meta.xml
<ListView>
    <fullName>All_Datos_Electorales_Votante</fullName>
    <columns>NAME</columns>
    <columns>DNI__c</columns>
    <columns>Grupo_Activista__c</columns>
    <columns>Activista__c</columns>
    <columns>Domicilio_Padron__c</columns>
    <columns>Es_Provisorio__c</columns>
    <columns>Nombre_Circuito__c</columns>
    <columns>Circuito_Numero__c</columns>
    <columns>Nro_Mesa__c</columns>
    <columns>Orden__c</columns>
    <columns>Etiqueta__c</columns>
    <columns>Medio_Etiqueta__c</columns>
    <columns>Comentario__c</columns>
    <columns>Voto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos - Datos Electorales Votante</label>
    <sharedTo>
        <group>Activismo</group>
    </sharedTo>
</ListView>